# temporal-demo-korea

./: .gitignore  README.md  justfile
demo-1-korean-fortune/: .env.example  .gitignore  CLAUDE.md  README.md  WORKFLOW_DIAGRAMS.md  justfile  pyproject.toml
demo-1-korean-fortune/src/: __init__.py  interactive.py  models.py  starter.py  worker.py
demo-1-korean-fortune/src/activities/: fortune.py  mbti.py  saju.py
demo-1-korean-fortune/src/workflows/: fortune_workflow.py  interactive_workflow.py
demo-1-korean-fortune/tests/: test_interactive.py  test_saju.py
demo-2-logistics/: CLAUDE.md  README.md  WORKFLOW_DIAGRAMS.md  justfile  pyproject.toml
demo-2-logistics/src/: __init__.py  approve.py  models.py  starter.py  track.py  worker.py
demo-2-logistics/src/activities/: notifications.py  payment.py  shipping.py  warehouse.py
demo-2-logistics/src/web/: app.py
demo-2-logistics/src/web/static/: admin.html  index.html
demo-2-logistics/src/workflows/: order_workflow.py
demo-2-logistics/tests/: test_workflow.py
