[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logistics-fulfillment"
version = "0.1.0"
description = "Temporal demo: Logistics / Fulfillment Service with saga pattern, human-in-the-loop, and real-time tracking"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7.1,<2",
    "pydantic>=2.0,<3",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
